--- a/FrontEnd/main.html
+++ b/FrontEnd/main.html
@@ -13,9 +13,9 @@
 <body>
     <a href="top"></a>
     <header class="header" id="site-header">
-        <a href="http://127.0.0.1:8000/" class="logo" onclick="redirectToMainPage()"><img src="/static/images/logo.jpg" alt="" class="logo-img"><span class="c-green">TENGRI</span> NEWS</a>
+        <a href="https://api-k3a9.onrender.com/" class="logo" onclick="redirectToMainPage()"><img src="/static/images/logo.jpg" alt="" class="logo-img"><span class="c-green">TENGRI</span> NEWS</a>
         <nav class="navbar">
-            <a href="http://127.0.0.1:8000/" class="active">News</a>
+            <a href="https://api-k3a9.onrender.com/" class="active">News</a>
             <a href="find-out" class="">Relevant</a>
             <a href="sport" class="">Sport</a>
             <a href="travel" class="">Travel</a>
