--- a/FrontEnd/topic.html
+++ b/FrontEnd/topic.html
@@ -5,10 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/style/topic.css">
     <link rel="icon" href="/static/images/logo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"defer></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js" defer></script>
+    <script src="/static/libs/ScrollTrigger.min.js" defer></script>
+    <script src="/static/libs/gsap.min.js" defer></script>
+    <script src="/static/libs/ScrollSmoother.min.js" defer></script>
+    <script src="/static/JavaScripts/header.js" defer></script>
+    <script src="/static/JavaScripts/search.js"></script>
     <title>Tengri News</title>
 </head>
 <body>
-    <a href="top"></a>
+    <div class="wrapper">
+        <div class="content_main">
+            <a href="top"></a>
     <header class="header" id="site-header">
         <a href="https://api-k3a9.onrender.com/" class="logo" onclick="redirectToMainPage()"><img src="/static/images/logo.jpg" alt="" class="logo-img"><span class="c-green">TENGRI</span> NEWS</a>
         <nav class="navbar">
@@ -83,8 +94,7 @@
             </div>
         </div>
     </footer>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="/static/JavaScripts/search.js"></script>
+        </div>
+    </div>
 </body>
 </html>
