last commit exept readme

--- a/FrontEnd/main.html
+++ b/FrontEnd/main.html
@@ -162,7 +162,7 @@
         <div class="sections">
             <h5>FOR NFACTORIAL</h5>
             <li>
-                <a href="https://github.com/mkhmtolzhas/TengriNews-For-nfac/">Репозитории в GitHub</a>
+                <a href="https://github.com/mkhmtolzhas/api">Репозитории в GitHub</a>
             </li>
             <li>
                 <a href="tel:+77767301903">Номер телефона</a>
