--- a/FrontEnd/topic.html
+++ b/FrontEnd/topic.html
@@ -45,6 +45,7 @@
                             <div class="img" style="background-image: url({{ article.image }}); background-size: cover;"></div>
                             <div class="title-content">
                                 <h3>{{ article.title }}</h3>
+                                <span class="date_article">{{ article.date }}</span>
                             </div>
                         </div>
                     </a>
@@ -70,7 +71,7 @@
         <div class="sections">
             <h5>FOR NFACTORIAL</h5>
             <li>
-                <a href="https://github.com/mkhmtolzhas/TengriNews-For-nfac/">Репозитории в GitHub</a>
+                <a href="https://github.com/mkhmtolzhas/api">Репозитории в GitHub</a>
             </li>
             <li>
                 <a href="tel:+77767301903">Номер телефона</a>
